# PyCG_DESCENT

./: .coveragerc  .gitignore  .project  .pydevproject  .travis.yml  CGDescent.html  CGDescent.rst  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  README  README.rst  cythonize.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js  setup.py  setup_with_cmake.py
PyCG_DESCENT/: __init__.py  _pycgd.cxx  _pycgd.pxd  _pycgd.pyx  version.py
PyCG_DESCENT/tests/: __init__.py  test_pycg_descent.py
_build/doctrees/: CGDescent.doctree  environment.pickle  index.doctree
_build/doctrees/_templates/autosummary/: class.doctree  module.doctree
_build/html/: .buildinfo
_modules/: PyCG_DESCENT.html  index.html
_templates/autosummary/: class.html  module.html
cmake/: FindPETSc.cmake
cpp_tests/: CMakeLists.txt  bench_minimization.cpp
doc/: Doxyfile  Doxyfile~  Makefile  PyCG_DESCENT.rst  conf.py  index.rst
doc/sphinxext/: viewcode-new.py
source/: cg_descent.c
source/CG_DESCENT6.7/: cg_descent.c
source/PyCG_DESCENT/: _pele_cgd_wrappers.h  cg_blas.h  cg_descent.h  cg_descent_wrapper.h  cg_descent_wrapper.hpp  cg_user.h
